# arche

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.arche/: CLAUDE.md  arche.py
.claude/: settings.json
docs/: anthropic-oauth-api.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  router.ts  style.css
frontend/src/components/: LoginScreen.vue  SetupWizard.vue
frontend/src/components/layout/: AppShell.vue  Sidebar.vue  StatusBar.vue
frontend/src/components/ui/: BackgroundTaskPanel.vue  CheckpointManager.vue  ControlPanel.vue  CostTracker.vue  DiffViewer.vue  InteractiveConsole.vue  LogPreview.vue  MCPServerPanel.vue  PermissionModal.vue  PlanModePanel.vue  SessionList.vue  ShortcutsHelp.vue  StatusCard.vue  TerminalOutput.vue  ThinkingModeSelector.vue  ToolExecutionViewer.vue
frontend/src/components/ui/chat/: CapabilityToggles.vue  EngineSelector.vue  FileOperationModal.vue  SkillSelector.vue  TodoItem.vue  TodoPanel.vue  TokenCounter.vue  index.ts
frontend/src/composables/: useKeyboardShortcuts.ts  useTheme.ts  useWebSocket.ts
frontend/src/stores/: agent.ts  files.ts  interactive.ts
frontend/src/views/: Dashboard.vue  Feedback.vue  Interactive.vue  Journals.vue  Logs.vue  Plans.vue  Settings.vue
src/arche/: PROMPT.md  RULE.md  RULE_COMMON.md  RULE_EXEC.md  RULE_RETRO.md  RULE_REVIEW.md  __init__.py  cli.py
src/arche/chat/: __init__.py  skills.py  storage.py
src/arche/core/: __init__.py  domain.py  engines.py  events.py  models.py  permissions.py
src/arche/engines/: __init__.py  base.py  claude_sdk.py  codex.py  deepagents.py
src/arche/server/: __init__.py  app.py  background_tasks.py  checkpoints.py  commands.py  custom_commands.py  daemon.py  hooks.py  interactive.py  mcp_manager.py  oauth_api.py
src/arche/templates/: ARCHE.md  CHECKLIST.yaml  PROMPT.md  RULE_COMMON.md  RULE_PROJECT.md  RULE_RETRO.md  RULE_REVIEW.md
