[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-host"
version = "1.0.0"
description = "Browser automation via Chrome DevTools Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["browser", "automation", "chrome", "cdp", "devtools", "selenium", "puppeteer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "websocket-client>=1.0.0",
    "requests>=2.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[project.scripts]
browser-host = "browser.host:main"

[project.urls]
Homepage = "https://github.com/yourname/browser-host"
Issues = "https://github.com/yourname/browser-host/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["browser*"]
