[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arche"
version = "0.3.0"
description = "Long-lived coding agent for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "GizAI"}
]
keywords = ["agent", "coding", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
server = ["fastapi", "uvicorn", "websockets"]

[project.scripts]
arche = "arche.cli:app"

[project.urls]
Homepage = "https://github.com/GizAI/arche"
Issues = "https://github.com/GizAI/arche/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["arche*"]
