[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arche"
version = "0.3.0"
description = "Long-lived coding agent with pluggable AI engines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["agent", "coding", "claude", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "requests>=2.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
deepagents = ["deepagents", "langchain-anthropic", "langchain-openai"]

[project.scripts]
arche = "arche.cli:app"

[project.urls]
Homepage = "https://github.com/yourname/arche"
Issues = "https://github.com/yourname/arche/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["arche*"]
